# OCRS

./: OCRS.odocl  OCRS.opam  README.md  _oasis  _tags  descr  dune-project  findlib  myocamlbuild.ml  opam  setup.ml
examples/: .test.ml.swp  Makefile  dune  main.ml  test.ml
opam/: descr  opam  url
src/: META  deshift.ml  deshift.mli  dune  expr_def.ml  expr_helpers.ml  expr_helpers.mli  expr_simplifications.ml  expr_simplifications.mli  expr_to_opcalc.ml  expr_to_opcalc.mli  expr_transforms.ml  expr_transforms.mli  factor.ml  factor.mli  isolate_Ovar.ml  isolate_Ovar.mli  lexer.ml  lexer.mll  mat_functions.ml  mat_functions.mli  mat_helpers.ml  ocrs.ml  ocrs.mldylib  ocrs.mllib  ocrs.mlpack  opLexer.ml  opParser.ml  opParser.mli  op_simplifications.ml  op_simplifications.mli  op_transforms.ml  parser.ml  parser.mli  parser.mly  shift.ml  solve_mat_rec.ml  solve_mat_rec.mli  solve_rec.ml  solve_rec.mli  (+6 more)
src/parser_files/: lexer.mll  opLexer.mll  opParser.mly  parser.mly
test/: main.ml  test.ml
